[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wmwpy"
version = "0.0.1"
authors = [
  { name="ego-lay-atman-bay" },
]
description = "Python module to work with Where's My...? games files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wmw-modding/wmwpy"
"Bug Tracker" = "https://github.com/wmw-modding/wmwpy/issues"
