[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wmwpy"
authors = [
  { name="ego-lay-atman-bay" },
]
# version = "0.0.1"
description = "Python module to work with Where's My...? games files."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "lxml",
  "numpy",
  "Pillow",
  "natsort",
  "filetype",
  "tk",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/wmw-modding/wmwpy"
"Bug Tracker" = "https://github.com/wmw-modding/wmwpy/issues"
"Documentation" = "https://wmw-modding.github.io/wmwpy/"

[tool.setuptools.dynamic]
version = { attr = "wmwpy.__version__" }
